--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,8 @@
     background-image: url("../media/background_l.png");
 }
 
-p {
-
-}
-
 /** Main **/
-section {
+#keys {
     margin: 0;
     position: absolute;
     top: 50%;
